# DesperationEngine

./: .gitignore  CMakeLists.txt
docs/Obsidian/Desperation Engine/: General Info.md  rendering API.md
docs/Obsidian/Desperation Engine/.obsidian/: workspace.json
docs/Obsidian/Desperation Engine/Rendering/Exposed Functionality/: Init.md  Render.md
include/: DesperationConfig.h  DesperationConfig.h.in
src/: main.cpp
src/core/: .CMakeLists.txt.swp  CMakeLists.txt
src/core/demath/: CMakeLists.txt
src/core/demath/include/: DEMath.h
src/core/demath/src/: DEMath.cpp
src/core/include/: test.h
src/core/logging/: CMakeLists.txt
src/core/logging/include/: Logger.h  WindowsLoggerProvider.h
src/core/logging/src/: WindowsLoggerProvider.cpp
src/core/serviceprovider/: CMakeLists.txt
src/core/serviceprovider/include/: ServiceLocator.h
src/core/serviceprovider/src/: ServiceLocator.cpp
src/core/src/: test.cpp
src/game/: CMakeLists.txt
src/game/components/: CMakeLists.txt
src/game/components/include/: GLMaterial.h  GLMesh.h  GameObject.h  Model.h
src/game/components/src/: GLMaterial.cpp  GLMesh.cpp  Model.cpp
src/game/include/: Scene.h
src/game/src/: Scene.cpp
src/modules/: CMakeLists.txt
src/modules/rendering/: CMakeLists.txt
src/modules/rendering/include/custom/: GLShader.h  OpenGLRender.h  RenderingTest.h
src/modules/rendering/src/: .OpenGLRender.cpp.swp  GLShader.cpp  OpenGLRender.cpp  RenderingTest.cpp
